test_data/Xml/Unexpected/Unserializable/InvalidClassName/blob/wrong.xml.exception
Expected an element representing an instance of class Blob with element name blob, but got: utterlyInvalid at: the beginning